...
      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
      <RoundedButton text="Product" onPress={() => navigation.navigate('Product')} testID="productEntityScreenButton" />
      <RoundedButton text="DailyRation" onPress={() => navigation.navigate('DailyRation')} testID="dailyRationEntityScreenButton" />
      <RoundedButton
        text="UserProperties"
        onPress={() => navigation.navigate('UserProperties')}
        testID="userPropertiesEntityScreenButton"
      />
      {/* jhipster-react-native-entity-screen-needle */}
    </ScrollView>
  );
}

