...
      return;
    }
    setPage(page + 1);
    fetchUserProperties();
  };
  return (
    <View style={styles.container} testID="userPropertiesScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={userPropertiesList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
